\name{NEWS}
\title{NEWS file for the gCMAP}

\section{Changes in version 1.17.2}{
\itemize{
\item{BUGFIX: }{Added import of the Matrix package to NAMESPACE file.}
}
}

\section{Changes in version 1.17.0}{
\itemize{
\item{BUGFIX: }{Added camera's newly introduced inter.gene.cor parameter in camera_score-methods.}
}
}

\section{Changes in version 1.11.3}{
\itemize{
\item{BUGFIX: }{The wiki2cmap function now excludes empty files downloaded from wikipathways from parsing.}
\item{BUGFIX: }{The go2cmap function is now exported.}
\item{BUGFIX: }{The reactom2cmap function is currently defunct, because the reactome.db package is broken.}
}
}

\section{Changes in version 1.11.2}{
  \itemize{
    \item{CHANGE: }{Fixed typo in mroast_score method.}
  }
}


\section{Changes in version 1.11.1}{
  \itemize{
    \item{BUGFIX: }{Fixed the \code{romer_score method} to accomodate the change in argument order in limma's \code{romer} function.}
  }
}

\section{Changes in version 1.11.0}{
  \itemize{
    \item{CHANGE: }{Version bump for BioC update.}
  }
}

\section{Changes in version 1.10.0}{
  \itemize{
    \item{CHANGE: }{Version bump for BioC update.}
  }
}

\section{Changes in version 1.9.2}{
  \itemize{
    \item{BUGFIX: }{Updated geneIndex method to accept both symbols2indices
      and id2indices functions from limma, depending on the limma version.}
  }
}

\section{Changes in version 1.8.1}{
  \itemize{
    \item{BUGFIX: }{Updated extraction of big.max objects while maintaining row.names.}
  }
}

\section{Changes in version 1.7.2}{
  \itemize{
    \item{CHANGE: }{Helper functions KEGG2cmap, reactome2cmap, wiki2cmap and go2cmap have two additional parameters, min.size and max.size, restricting the output to gene sets containing members within the specified range.}
    \item{CHANGE: }{Method camera_score now outputs correlations in column 'effect'.}
    \item{BUGFIX: }{Correct numbers of annotated genes are now returned for each set.}
  }
}

\section{Changes in version 1.7.1}{