@@ -1230,36 +1230,10 @@ mergeCMAPs <- function(x, y){
   if(  any( varLabels( x ) !=  varLabels( y ))){
     stop( "Objects 'x' and 'y' have different pData columns.")
   }
-  
   common.features <- intersect( featureNames( x ), featureNames( y ))
   message(sprintf("eSets 'x' and 'y' share %s common features.", length(common.features)))
   
-  ## create empty eSet for output
-  merged.eset <- new( class( x ) ) 
-  annotation(merged.eset) <- annotation( x )
-  
-  ## merge data for each channel separately
-  for (element in assayDataElementNames( x ) ) {
-    merged.channel <- merge(
-      assayDataElement( x, element)[,],
-      assayDataElement( y, element)[,],
-      by.x=0, by.y=0, all=TRUE
-    )
-    row.names( merged.channel) <- merged.channel$Row.names
-    merged.channel$Row.names <- NULL
-    assayDataElement( merged.eset, element) <- as.matrix( merged.channel )
-  }
-  
-  ## merge pData tables => requires the same column names in each eSet !
-  pData(merged.eset) <- rbind( pData( x ), pData( y ))
-  featureData(merged.eset) <- AnnotatedDataFrame(
-    data.frame(
-      probeid=row.names( merged.channel),
-      row.names=row.names(merged.channel)
-    )
-  )
-  sampleNames( merged.eset ) <- c( sampleNames( x ), sampleNames( y ))
-  return( merged.eset)
+  combine(x, y) 
 }
 
 center.function <- function(x, type) {
